# agenticCourse

./: .gitignore  README.md  README2.md  pyproject.toml
chroma_db/1cb739f0-16ad-46f8-b1e8-637a01cf6258/: index_metadata.pickle
src/agentic/sessionD/: example1.py  example2.py  example3.py  example4.py
src/agentic/session_a/: ex1.py  ex10.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py
src/agentic/session_b/: ex1.py  ex2.py  example2.py  exercise.md  forall.py  hugg.py  solution.py
src/day_8/session_a/: cha.py  example1.py
src/day_8/session_b/: example2.py
src/day_8/session_c/: example1.py
